// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeleteConfirmDialog > Snapshot Tests > matches snapshot for default state 1`] = `
<div>
  <div
    data-testid="dialog"
    open=""
  >
    <div
      data-testid="dialogcontent"
    >
      <div
        data-testid="dialogheader"
      >
        <div
          class="flex items-center gap-2"
          data-testid="dialogtitle"
        >
          <svg
            class="h-5 w-5 text-red-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
          确认删除
        </div>
        <div
          data-testid="dialogdescription"
        >
          此操作不可撤销，请谨慎操作
        </div>
      </div>
      <div
        class="gap-2"
        data-testid="dialogfooter"
      >
        <button
          type="button"
        >
          取消
        </button>
        <button
          class="bg-red-500 hover:bg-red-600 text-white"
          type="button"
        >
          确认删除
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteConfirmDialog > Snapshot Tests > matches snapshot with custom content 1`] = `
<div>
  <div
    data-testid="dialog"
    open=""
  >
    <div
      data-testid="dialogcontent"
    >
      <div
        data-testid="dialogheader"
      >
        <div
          class="flex items-center gap-2"
          data-testid="dialogtitle"
        >
          <svg
            class="h-5 w-5 text-red-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
          删除用户
        </div>
        <div
          data-testid="dialogdescription"
        >
          删除后该用户的所有数据将被永久清除
        </div>
      </div>
      <div
        class="py-4"
      >
        <div
          class="text-yellow-400"
        >
          <p>
            用户名: admin
          </p>
          <p>
            邮箱: admin@example.com
          </p>
        </div>
      </div>
      <div
        class="gap-2"
        data-testid="dialogfooter"
      >
        <button
          type="button"
        >
          取消
        </button>
        <button
          class="bg-red-500 hover:bg-red-600 text-white"
          type="button"
        >
          永久删除
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteConfirmDialog > Snapshot Tests > matches snapshot with disabled state 1`] = `
<div>
  <div
    data-testid="dialog"
    open=""
  >
    <div
      data-testid="dialogcontent"
    >
      <div
        data-testid="dialogheader"
      >
        <div
          class="flex items-center gap-2"
          data-testid="dialogtitle"
        >
          <svg
            class="h-5 w-5 text-red-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
          确认删除
        </div>
        <div
          data-testid="dialogdescription"
        >
          此操作不可撤销，请谨慎操作
        </div>
      </div>
      <div
        class="gap-2"
        data-testid="dialogfooter"
      >
        <button
          type="button"
        >
          取消
        </button>
        <button
          class="bg-red-500 hover:bg-red-600 text-white"
          disabled=""
          type="button"
        >
          确认删除
        </button>
      </div>
    </div>
  </div>
</div>
`;
